k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testytest-service
spec:
  selector:
    app: testytest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
